<resources>
    <string name="app_name">Camera</string>

    <!--照片尺寸-->
    <string name="settings">Settings</string>
    <string name="title_storage_path">存储路径</string>
    <string name="title_picture_size">照片尺寸</string>
    <string name="summery_picture_size">1200万像素</string>
    <string name="title_window_proportion">拍照画幅</string>
    <string name="title_window_proportion_size">标准 4:3</string>
    <string name="title_count_down">倒计时拍照</string>
    <string name="summery_count_down">关闭</string>
    <string name="title_auxiliary_line">辅助线</string>
    <string name="summery_auxiliary_line">拍照时添加辅助线</string>
    <string name="title_save_position_info">存储位置信息</string>
    <string name="summery_save_position_info">设置是否记录拍照时候的地理位置</string>
    <string name="title_photographing_sound">拍照声</string>
    <string name="summery_photographing_sound">是否开启拍照声</string>
    <string name="title_delay_sound">倒计时过程发出的声音</string>
    <string name="summery__delay_sound">是否设置倒计时声音</string>
    <string name="title_take_photo_sound">音量拍照声</string>
    <string name="summery_photo_sound">是否设置按下音量键拍照</string>
    <string name="title_focused_sound">聚焦声</string>
    <string name="summery_focused_sound">是否开启拍照时聚焦声音</string>
    <string name="title_hd_preview">高清预览</string>
    <string name="summery_hd_preview">是否高清预览</string>
    <string name="picture_x">x</string>

    <string name="count_down_title_text">0</string>
    <string name="count_down_top_close">关闭</string>
    <string name="count_down_top_two">2s</string>
    <string name="count_down_top_five">5s</string>
    <string name="count_down_top_ten">10s</string>



    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>

    <string name="not_support_front_facing_camera">Your device does not support a front-facing camera.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="preview_scale_43">4:3</string>
    <string name="preview_scale_11">1:1</string>
    <string name="preview_scale_189">18:9</string>

    <string name="default_video_time">00:00</string>

    <string name="model_hdr">HDR</string>

    <string name="gallery_share">Shared</string>
    <string name="gallery_edit">Edit</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_more">More</string>

    <string name="gallery_delete_ok">是否要删除选中文件</string>
    <string name="gallery_delete_success">Delete Success</string>
    <string name="gallery_detail">Details</string>

    <string name="gallery_file_name">文件名称：</string>
    <string name="gallery_file_type">文件种类：</string>
    <string name="gallery_file_duration">文件大小：</string>
    <string name="gallery_file_modify">修改时间：</string>
    <string name="gallery_file_time">时长：</string>
    <string name="gallery_file_resolution">分辨率：</string>
    <string name="gallery_file_path">路径：</string>
    <string name="gallery_video">Video</string>
    <string name="gallery_image">Photo</string>
    <string name="gallery_time">Time</string>
    <string name="gallery_image_num">张照片</string>
    <string name="gallery_video_num">个视频</string>
    <string name="gallery_rotate">旋转</string>
    <string name="gallery_rename">重命名</string>
    <string name="gallery_play">播放幻灯片</string>
    <string name="gallery_more_edit">更多编辑</string>
    <string name="gallery_rename_not_null">不能为空</string>
    <string name="gallery_name_exist">名字已存在</string>
    <string name="gallery_rename_success">重命名成功</string>
</resources>
