<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:background="@color/popup_background"
    android:id="@+id/rl_more_pop"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:divider="@color/popup_background"
        android:dividerPadding="0.5dp"
        android:gravity="left"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_more_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/gallery_more_edit"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:text="@string/gallery_play"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_rename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:text="@string/gallery_rename"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:text="@string/gallery_share"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_rotate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:text="@string/gallery_rotate"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>