<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">


    <!--<TextView-->
        <!--android:id="@+id/tv_close"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/count_down_top_close" />-->

    <!--<TextView-->
        <!--android:id="@+id/tv_two"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/count_down_top_two" />-->

    <!--<TextView-->
        <!--android:id="@+id/tv_five"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/count_down_top_five" />-->

    <!--<TextView-->
        <!--android:id="@+id/tv_ten"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/count_down_top_ten" />-->

    <RadioGroup
        android:id="@+id/rg_count_down"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <RadioButton
            android:id="@+id/rb_close"
            android:button="@null"
            android:textColor="@drawable/selector_count_down_top"
            android:gravity="center"
            android:text="@string/count_down_top_close"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/rb_two"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/selector_count_down_top"
            android:text="@string/count_down_top_two"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/rb_five"
            android:button="@null"
            android:gravity="center"
            android:text="@string/count_down_top_five"
            android:textColor="@drawable/selector_count_down_top"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/rb_ten"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/selector_count_down_top"
            android:text="@string/count_down_top_ten"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RadioGroup>


</LinearLayout>